# Mikesh-s-Game-of-Life

./: CMakeLists.txt  Game of Life.sln  Mikesh's Game of Life.sln  Mikesh's Game of Life.vcxproj  README.md  config.ini
Game of Life/: Game of Life.vcxproj  Game of Life.vcxproj.filters  config.cpp  config.h  config.ini  grid.cpp  grid.h  main.cpp  simulation.cpp  simulation.h
Mikesh's Game of Life/: Mikesh's Game of Life.vcxproj  Mikesh's Game of Life.vcxproj.filters
Mikesh's Game of Life/ini/: config.ini
Mikesh's Game of Life/src/: config.cpp  config.h  intro.cpp  intro.h  main.cpp
src/: config.h  grid.cpp  grid.h  grid.hpp  intro.cpp  intro.hpp  main.cpp  settings.cpp  settings.hpp  simulation.cpp  simulation.hpp
